avoiding layout shifts

--- a/src/assets/sass/components/_banner.scss
+++ b/src/assets/sass/components/_banner.scss
@@ -7,9 +7,6 @@
         object-fit: cover;
         z-index: -1;
         max-height: 900px;
-        @include responsive(sm){
-            max-height: 500px;
-        }
     }
     .text-wrap{
         background-color: #637698;
